--- a/src/main/resources/templates/user-index.html
+++ b/src/main/resources/templates/user-index.html
@@ -42,7 +42,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" th:href="@{user/new}">Create User</a>
+          <a class="nav-link active" aria-current="page" th:href="@{user/new}">Login User</a>
         </li>
 
       </ul>
